posiGen_FullsendBox/src/objects/PM_Steps__c.object
<CustomObject>
    <fields>
        <fullName>Aging__c</fullName>
        <label>Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Installation_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Installation Step</label>
        <referenceTo>Business_Installation_Step__c</referenceTo>
        <relationshipName>PM_Stepses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Status</label>
        <referenceTo>Business_Status__c</referenceTo>
        <relationshipName>PM_Stepses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>In_Process_Aging_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Process Aging Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_Process_Aging__c</fullName>
        <label>In Process Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>In_Process_End_Date__c</fullName>
        <label>In Process End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>In_Process_Start_Date__c</fullName>
        <label>In Process Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manual_Bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Bypass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NA_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NA Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PM_Review_Aging_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PM Review Aging Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PM_Review_Aging__c</fullName>
        <label>PM Review Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PM_Review_End_Date__c</fullName>
        <label>PM Review End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PM_Review_Start_Date__c</fullName>
        <label>PM Review Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PM_Stage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PM Stage</label>
        <referenceTo>PM_Stage__c</referenceTo>
        <relationshipName>PM_Stepses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PM_Tool_V2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PM Tool V2</label>
        <referenceTo>PM_Tool_V2__c</referenceTo>
        <relationshipName>PM_Stepses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>PM Step</label>
    <nameField>
        <displayFormat>Step-{000000}</displayFormat>
        <label>PM Steps Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PM Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>